--- a/bluetooth-spp-terminal/src/main/res/values/dimens.xml
+++ b/bluetooth-spp-terminal/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_vertical_margin">5dp</dimen>
+    <dimen name="padding">3dp</dimen>
 </resources>
